# AdventOfCode

./: .gitignore  README.md  pyproject.toml
2020/day1/: solution.py  star1.py  star2.py
2020/day2/: solution.py  star1.py  star2.py
2020/day3/: solution.py  star1.py  star2.py
2020/day4/: solution.py  star1.py  star2.py
2020/day5/: solution.py  star1.py  star2.py
2020/day6/: solution.py  star1.py  star2.py
src/2017/rust_solutions/src/: day_01.rs  day_02.rs  main.rs
src/2020/inputs/: day8.txt
src/2020/python/: pyproject.toml
src/2020/python/src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day2.py  day3.py  day4.py  day6.py  main.py
src/2020/python/src/solutions/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
src/2020/rust/: Cargo.toml
src/2020/rust/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  main.rs  utils.rs
src/2021/python/: pyproject.toml
src/2021/python/src/day1/: main.py
src/2021/python/src/day2/: main.py
src/2021/python/src/day3/: main.py
src/2022/rust/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  main.rs  utils.rs
